--- a/index.html
+++ b/index.html
@@ -445,21 +445,21 @@
             <div class="row">
               <div class="col-md-4 col-sm-6">
                 <div class="contact">
-                  <i class="fab fa-github-square" style="color:#252a30"></i><a href="https://github.com/Surya1231"
+                  <i class="fab fa-github-square" style="color:#252a30"></i><a href="https://github.com/niteshmishra188/"
                     target="_blank"> Github</a>
                 </div>
               </div>
 
               <div class="col-md-4 col-sm-6">
                 <div class="contact">
-                  <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"
+                  <a href="#" target="_blank"><i class="fab fa-facebook-square"
                       style="color:blue"></i>Facebook </a>
                 </div>
               </div>
 
               <div class="col-md-4 col-sm-6">
                 <div class="contact">
-                  <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"
+                  <a href="https://www.linkedin.com/in/nitesh-mishra-b7a345285/" target="_blank"><i class="fab fa-linkedin"
                       style="color:#0077B5"></i>Linkedin </a>
                 </div>
               </div>
