--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
             <br>
             <div class="downloadcv">
-              <a href="C:\Users\mishr\Desktop\.vscode\nitesh.com_files\CV.pdf" target="_blank" class="btn">Download
+              <a href="\CV.pdf" target="_blank" class="btn">Download
                 CV</a>
             </div>
             <br>
@@ -330,7 +330,7 @@
               </div>
             </div>
             <div class="text2">
-              <h5><a href="Online-Weather-cheaker/index.html">Weather Cheaker</a> </h5>
+              <h5><a href="weather-cheaker.html">Weather Cheaker</a> </h5>
             </div>
           </div>
         </div>
